<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="fr">
    <string name="app_name" translatable="true">mDAN</string>
    <string name="app_long_name">Démonstrateur d\'Accessibilité Numérique mobile</string>
    <string name="navigation_return">Retourner à la page précédente</string>
    <string name="navigation_home">Retourner à la page d\'accueil</string>
    <string name="section_home">Accueil</string>
    <string name="section_criteria">Critères d\'accessibilité Android</string>
    <string name="section_dev">Guide pour les développeurs</string>
    <string name="section_test">Guide testeur</string>
    <string name="section_talkback">Talkback</string>
    <string name="section_axs_options">Options d\'accessibilité</string>
    <string name="section_axs_orange">L\'accessibilité chez Orange</string>
    <string name="section_axs_statement">Déclaration d\'accessibilité</string>
    <string name="section_about">À propos</string>
    <string name="section_legal">Mentions légales</string>
    <string name="section_contact">Contact</string>
    <string name="section_cgu">Conditions générales d\'utilisation</string>
    <string name="section_other_apps">Autres applications</string>
    <string name="section_contact_us">Nous contacter</string>
    <string name="registrant" translatable="false">ORANGE SA\nSiège social : 111, quai du Président Roosevelt\n92130 Issy-les-Moulineaux</string>
    <string name="title_content">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit.</string>
    <string name="alert_before_leaving">Attention, vous quittez l\'application.\nVoulez-vous continuer ?</string>
    <string name="selected">sélectionné</string>
    <string name="not">non</string>
    <string name="on">sur</string>
    <string name="promotion">promotion</string>
    <string name="image">image</string>
    <string name="step">étape </string>
    <string name="heure"> heure </string>
    <string name="date_format">dd-MM-yyyy HH:mm</string>
    <string name="axsactivated">Exemple accessible</string>
    <string name="axsdisabled">Exemple non accessible</string>
    <string name="example">Exemple</string>
    <string name="alert_title">Information</string>
    <string name="alert_content">Afin de mieux comprendre la différence entre l\'exemple accessible et non accessible, nous vous recommandons, d\'activer l\'option « %1s ».</string>
    <string name="alert_choice">ne plus afficher (vous aurez toujours l\'accès rapide aux options d\'accessibilité en haut à droite)</string>
    <string name="alert_ok">Gérer les options d\'accessibilité</string>
    <string name="alert_cancel">Annuler</string>
    <string name="alert_close_cd">Fermer la fenêtre</string>
    <string name="next">Suivant</string>
    <string name="previous">Précédent</string>
    <string-array name="alert_options">
        <item>TalkBack</item>
        <item>Grand caractères</item>
    </string-array>
    <string name="home_long_mdan">Démonstrateur d\'Accessibilité\nNumérique mobile</string>
    <string name="home_content">Découvrez l\'accessibilté à travers des exemples, explications et présentation des outils d\'accessibilité!</string>
    <string name="home_section_criteria">Guide Android\nd\'accessibilité</string>
    <string name="home_section_criteria_cd">Guide Android d\'accessibilité, Bouton</string>
    <string name="home_section_dev">Guide\nDéveloppeurs</string>
    <string name="home_section_dev_cd">Guide à destination des développeurs, Bouton</string>
    <string name="home_section_talkback">TalkBack</string>
    <string name="home_section_talkback_cd">Guide d\'utilisation de TalkBack, Bouton</string>
    <string name="home_section_options">Options\nd\'accessibilité</string>
    <string name="home_section_options_cd">Options d\'accessibilité, Bouton</string>
    <string name="home_title_what">L\'accessibilité, késako ?</string>
    <string name="home_title_why">Pourquoi l\'accessibilité numérique ?</string>
    <string name="home_title_dan">Démonstrateur d\'Accessibilité\nNumérique mobile</string>
    <string formatted="false" name="home_content_what">C\'est la capacité d\'un produit ou d\'un service à être utilisable par tous dans tous les contextes. On dit d\'une application mobile qu\'elle est accessible si elle interagit correctement avec les options d\'accessibilité offertes nativement par le mobile.\n\nAinsi, un utilisateur non-voyant, malvoyant, malentendant ou présentant tout autre type de handicap sera en mesure d\'utiliser 100% des fonctionnalités d\'une application.</string>
    <string name="home_content_why">- Parce qu\'elle bénéficie à 80 millions de personnes handicapées ou séniors en Europe\n\n- Parce que nous passons en moyenne 8 ans de notre vie en situation de handicap\n\n- Mais aussi et surtout parce qu\'un produit accessible est plus facile à utiliser et qu\'il bénéficie à tous !</string>
    <string name="home_content_dan">L\'accessibilité numérique est un domaine souvent inconnu ou méconnu.\n\nLe présent Démonstrateur d\'Accessibilité Numérique a pour vocation de présenter l\'accessibilité mobile sous toutes ses formes. \n\nL\'application présente donc : \n\n- Ce qu\'est l\'accessibilité numérique.\n- Les options d\'accessibilité qui existent sous Android.\n- Comment utiliser les options offertes par les mobiles?.\n- Un guide pour TalkBack (le lecteur d\'écran d\'Android).\n- Les critères d\'accessibilité mobile (présentation non technique) avec des exemples.\n- Un mémo pour développeurs (comment développer accessible).</string>
    <string-array name="criteria_list">
        <item>Image</item>
        <item>Couleur</item>
        <item>Alternative textuelle</item>
        <item>Titre et entête</item>
        <item>État des éléments</item>
        <item>Composant standard</item>
        <item>Zone de clic</item>
        <item>Elément fantôme</item>
        <item>Taille des textes</item>
        <item>Contrôle de contenu</item>
        <item>Changement de contenu</item>
        <item>Scroll horizontal</item>
        <item>Formulaire</item>
        <item>Ordre de lecture</item>
        <item>Navigation au focus</item>
    </string-array>
    <string name="criteria_description_title">Description et utilisation</string>
    <string name="criteria_description_content">Ce guide a pour objectif de présenter les différents critères d\'accessibilité à respecter pour obtenir une application Android accessible. Chaque critère est présenté en expliquant pourquoi il est important et la règle d\'accessibilité qui en découle. Les critères sont explicités par des exemples fonctionnels.</string>
    <string name="criteria_description_content2">Pour la plupart des exemples vous devez avoir au préalable activé Talkback, le lecteur d\'écran d\'Android.</string>
    <string name="criteria_sections">Critères</string>
    <string name="criteria_sections_title">Critères d\'accessibilité Android</string>
    <string name="criteria_cd_sections">Selectionnez un critère dans la liste ci-dessous</string>
    <string name="criteria_accessible_example">Exemple accessible</string>
    <string name="criteria_accessible_example_more">Exemple accessible ++</string>
    <string name="criteria_not_accessible_example">Exemple non accessible</string>
    <string name="criteria_template_why">Le pourquoi</string>
    <string name="criteria_template_rule">La règle</string>
    <string name="criteria_template_example">Les exemples</string>
    <string name="criteria_template_option">Option</string>
    <string name="criteria_template_option_tb">TalkBack</string>
    <string name="criteria_template_option_largetext">Grand caractères</string>
    <string name="criteria_template_option_focus">Clavier</string>
    <string name="criteria_img_title">Image</string>
    <string name="criteria_img_why_description">Les images sont très souvent utilisées pour transmettre de nombreuses informations.\nComme le dit l\'adage, une image vaut mille mots.</string>
    <string name="criteria_img_rule_description">Les non-voyants ne pouvant voir les images, il est important que celles-ci possèdent une alternative qui donne toutes les informations portées par l\'image.\n\nA noter toutefois que certaines images sont utilisées à des fins décoratives. Ces images ne nécessitent pas d\'alternative.\n\nOn verra à travers plusieurs exemples comment bien renseigner les alternatives des images.</string>
    <string name="criteria_img_ex1_description">Toute image portant de l\'information doit avoir une alternative textuelle.\n\nDans le cas d\'une image contenant du texte, l\'alternative sera ledit texte.\n\nDans le cas d\'une image qui apporte des informations sous la forme d\'un graphe, dessin ou autre, l\'alternative devra contenir toutes les informations nécessaires présentes dans l\'image.</string>
    <string name="criteria_text_readability_ex_yes">Ce texte utilise une police sans-serif et est de taille suffisante pour être lisible facilement et donc accessible.</string>
    <string name="criteria_text_readability_ex_no_small">Ce texte est de taille trop petite pour être lisible facilement et est donc inaccessible.</string>
    <string name="criteria_text_readability_ex_no_italic">L\'italique de ce texte gêne la lisibilité de celui-ci qui n\'est donc pas accessible.</string>
    <string name="criteria_text_readability_ex_no_serif">Ce texte utilise une police serif qui peut rendre sa lecture difficile pour les dyslexiques et est donc inaccessible.</string>
    <string name="options_content">Sous Android il existe un certain nombre d\'options d\'accessibilité pour améliorer le confort des utilisateurs en situation de handicap. Nous allons ici en présenter quelques unes.</string>
    <string name="options_content_description">Description</string>
    <string name="options_content_list_title">Liste des options d\'accessibilité</string>
    <string name="options_content_btn">Accéder aux options d\'accessibilité</string>
    <string name="my_songwriter">Lenny Kravitz</string>
    <string name="my_song_title">Are you gonna go my way</string>
    <string name="my_song_length">3:36</string>
    <string name="my_song_length_alt">3 minutes 36</string>
    <string name="my_song_title2">Low</string>
    <string name="my_song_length2">4:46</string>
    <string name="my_song_length2_alt">4 minutes 46</string>
    <string name="contact_title">EASE</string>
    <string name="contact_website">Site web :</string>
    <string name="contact_website_link"><a href="http://webidea.si.francetelecom.fr/spip/spip.php?rubrique119"><u>Cliquez ici pour nous contacter</u></a></string>
    <string name="contact_support">Demande de support :</string>
    <string name="contact_support_link"><a href="http://isf.idea.rd.francetelecom.fr/issue.html?applicationId=4453&amp;amp;projectName="><u>Cliquez ici pour accéder au support</u></a></string>
    <string name="contact_team">Contacter l\'équipe :</string>
    <string name="contact_team_mail"><a href="accessibility.support@orange.com"><u>Nous envoyer un email</u></a></string>
    <string name="contact_cd_website_link">Lien vers le site de contact</string>
    <string name="contact_cd_support_link">Lien vers le site de support</string>
    <string name="contact_cd_team_mail">Envoyer un e-mail afin de nous contacter</string>
    <string name="bottom_navigation_menu_options">Options</string>
    <string name="bottom_navigation_menu_dev">Développement</string>
    <string name="bottom_navigation_menu_criteria">Critères</string>
</resources>