<?xml version="1.0" encoding="utf-8"?><!--
  ~ Licensed to the Apache Software Foundation (ASF) under one
  ~ or more contributor license agreements.  See the NOTICE file
  ~ distributed with this work for additional information
  ~ regarding copyright ownership.  The ASF licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/song_data_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/my_song_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/singer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_songwriter"
        app:layout_constraintStart_toStartOf="@id/songName"
        app:layout_constraintTop_toBottomOf="@id/songName" />

    <TextView
        android:id="@+id/songLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/my_song_length_alt"
        android:text="@string/my_song_length"
        app:layout_constraintStart_toStartOf="@id/singer"
        app:layout_constraintTop_toBottomOf="@id/singer" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songLength" />

    <TextView
        android:id="@+id/songName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_song_title2"
        app:layout_constraintStart_toStartOf="@id/songName"
        app:layout_constraintTop_toTopOf="@id/divider" />

    <TextView
        android:id="@+id/singer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_songwriter"
        app:layout_constraintStart_toStartOf="@id/songName2"
        app:layout_constraintTop_toBottomOf="@id/songName2" />

    <TextView
        android:id="@+id/songLength2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/my_song_length2_alt"
        android:text="@string/my_song_length2"
        app:layout_constraintStart_toStartOf="@id/singer2"
        app:layout_constraintTop_toBottomOf="@id/singer2" />


</androidx.constraintlayout.widget.ConstraintLayout>