<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one
  ~ or more contributor license agreements.  See the NOTICE file
  ~ distributed with this work for additional information
  ~ regarding copyright ownership.  The ASF licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <group android:id="@+id/main_menu_group">
        <item android:id="@+id/action_axs_orange" android:title="@string/section_axs_orange"/>
        <item android:id="@+id/action_about" android:title="@string/section_about"/>
    </group>

    <group android:id="@+id/option_menu_group">
        <item
            android:icon="@drawable/ic_settings"
            android:id="@+id/action_option"
            android:title="@string/section_axs_options"
            app:showAsAction="always"/>
    </group>
</menu>
