<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/splitImageOptions"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/options_illustration"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/options_content_description"
        style="@style/TextViewStandard"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="@dimen/large_margin"
        android:background="@drawable/border"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/options_content"
        android:id="@+id/textViewDescriptionOptAxs"
        style="@style/TextViewStandard"
        android:textSize="14sp"
        android:paddingRight="@dimen/medium_margin"
        android:paddingLeft="@dimen/medium_margin"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_content_btn"
        android:id="@+id/buttonOptionsAxs"
        style="@style/BrandButton"
        android:layout_marginBottom="@dimen/medium_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/options_content_list_title"
        android:id="@+id/textViewTitleListOptAxs"
        style="@style/TextViewStandard"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:padding="@dimen/large_margin"
        android:layout_marginTop="@dimen/medium_margin" />

</LinearLayout>