<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one
  ~ or more contributor license agreements.  See the NOTICE file
  ~ distributed with this work for additional information
  ~ regarding copyright ownership.  The ASF licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/infoImageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/large_margin"
        app:srcCompat="@drawable/icon_infos" />

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@id/infoImageView"
        android:text="@string/alert_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/dialogButtonOK"
        style="@style/BrandButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_ok"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@id/text"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/dialogButtonCancel"
        style="@style/BrandBlackButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_cancel"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@id/dialogButtonOK"
        android:layout_centerHorizontal="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialogButtonCancel"
        android:text="@string/alert_choice"
        android:textSize="@dimen/font_size_extra_small"
        android:gravity="left"
        android:id="@+id/choice"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingLeft="10dp"
        android:button="@drawable/checkbox_bg_selector"
        android:foreground="@drawable/foregroundselector"/>

</RelativeLayout>