<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one
  ~ or more contributor license agreements.  See the NOTICE file
  ~ distributed with this work for additional information
  ~ regarding copyright ownership.  The ASF licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/BrandBody1"
        android:id="@+id/readableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criteria_text_readability_ex_yes"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/core_black"
        android:textSize="14sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/medium_margin"
        android:paddingRight="@dimen/medium_margin"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/notReadableTextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criteria_text_readability_ex_no_small"
        android:textColor="@color/core_black"
        android:textSize="8sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/medium_margin"
        android:paddingRight="@dimen/medium_margin"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/notReadableTextItalic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criteria_text_readability_ex_no_italic"
        android:textColor="@color/core_black"
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/medium_margin"
        android:paddingRight="@dimen/medium_margin"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/notReadableTextSerif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criteria_text_readability_ex_no_serif"
        android:textColor="@color/core_black"
        android:textSize="14sp"
        android:fontFamily="@font/robotoslab"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/medium_margin"
        android:paddingRight="@dimen/medium_margin"
        android:layout_gravity="center_horizontal" />


</LinearLayout>